--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.0'
     testCompile 'junit:junit:4.12'
     compile files('libs/orchid-1.0.0.jar')
+
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
 }
